--- a/debian/rules
+++ b/debian/rules
@@ -34,7 +34,7 @@ update-patch-series:
 		mv $${patch}.chomped $$patch ; \
 	done
 
-DEB_CONFIGURE_EXTRA_FLAGS = --with-realtime-group=pulse-rt
+DEB_CONFIGURE_EXTRA_FLAGS = --with-realtime-group=pulse-rt --disable-per-user-esound-socket
 DEB_DH_MAKESHLIBS_ARGS_ALL = --exclude=usr/lib/pulse-0.9/modules
 DEB_DH_INSTALL_ARGS = --sourcedir=$(CURDIR)/debian/tmp
 DEB_UPDATE_RCD_PARAMS = defaults 25 15
