debian/control: Set the maintainer to the pkg-pulseaudio mailinglist

--- a/debian/control
+++ b/debian/control
@@ -1,8 +1,8 @@
 Source: pulseaudio
 Section: sound
 Priority: optional
-Maintainer: CJ van den Berg <cj@vdbonline.com>
-Uploaders: Sjoerd Simons <sjoerd@debian.org>
+Maintainer: Pulseaudio maintenance team <pkg-pulseaudio-devel@lists.alioth.debian.org>
+Uploaders: CJ van den Berg <cj@vdbonline.com>, Sjoerd Simons <sjoerd@debian.org>
 Build-Depends: debhelper (>= 5), cdbs, quilt, m4, libltdl3-dev,
     liboil0.3-dev (>= 0.3.0) | liboil-dev, libsamplerate0-dev,
     libsndfile1-dev (>= 1.0.10) | libsndfile-dev, libx11-dev,
