--- a/debian/control
+++ b/debian/control
@@ -303,7 +303,8 @@ Depends: ${shlibs:Depends}, ${misc:Depends}
 Conflicts: pulseaudio (<< 0.9.6-2), pulseaudio-esound-compat (<< 0.9.6-2),
     pulseaudio-module-gconf (<< 0.9.6-2), pulseaudio-module-hal (<< 0.9.6-2),
     pulseaudio-module-jack (<< 0.9.6-2), pulseaudio-module-lirc (<< 0.9.6-2),
-    pulseaudio-module-x11 (<< 0.9.6-2), pulseaudio-module-zeroconf (<< 0.9.6-2)
+    pulseaudio-module-x11 (<< 0.9.6-2),
+    pulseaudio-module-zeroconf (<< 0.9.6-2), libpulsecore8 (= 0.9.14)
 Recommends: pulseaudio
 Description: PulseAudio sound server core
  PulseAudio, previously known as Polypaudio, is a sound server for POSIX and
