--- a/debian/control
+++ b/debian/control
@@ -13,7 +13,8 @@ Build-Depends: debhelper (>= 5), cdbs, quilt, m4, libltdl7-dev,
     liblircclient-dev, libgconf2-dev, libhal-dev, libasyncns-dev,
     libatomic-ops-dev, libspeexdsp-dev (>= 1.2~rc1),
     libbluetooth-dev (>= 3.0) [!kfreebsd-i386 !kfreebsd-amd64 !hurd-i386],
-    libpolkit-dbus-dev, libgdbm-dev, intltool, libgtk2.0-dev, libxtst-dev
+    libpolkit-dbus-dev, libgdbm-dev, intltool, libgtk2.0-dev, libxtst-dev,
+    libssl-dev
 Standards-Version: 3.8.0
 Vcs-Git: git://git.debian.org/git/pkg-pulseaudio/pulseaudio.git
 Vcs-Browser: http://git.debian.org/?p=pkg-pulseaudio/pulseaudio.git
@@ -243,6 +244,26 @@ Description: GConf module for PulseAudio sound server debugging symbols
  much better latency, mixing/re-sampling quality and overall architecture.
  .
  This package contains debugging symbols for the PulseAudio GConf module.
+
+Package: pulseaudio-module-raop
+Architecture: any
+Depends: ${shlibs:Depends}, ${misc:Depends}
+Description: RAOP module for PulseAudio sound server
+ PulseAudio, previously known as Polypaudio, is a sound server for POSIX and
+ WIN32 systems. It is a drop in replacement for the ESD sound server with
+ much better latency, mixing/re-sampling quality and overall architecture.
+ .
+ This module enables PulseAudio to stream audio to an Apple Airport Express.
+
+Package: pulseaudio-module-raop-dbg
+Architecture: any
+Depends: ${shlibs:Depends}, ${misc:Depends}
+Description: RAOP module for PulseAudio sound server
+ PulseAudio, previously known as Polypaudio, is a sound server for POSIX and
+ WIN32 systems. It is a drop in replacement for the ESD sound server with
+ much better latency, mixing/re-sampling quality and overall architecture.
+ .
+ This package contains debugging symbols for the PulseAudio RAOP module.
 
 Package: pulseaudio-module-bluetooth
 Architecture: alpha amd64 arm armel hppa i386 ia64 mips mipsel powerpc s390 sparc
