--- a/debian/control
+++ b/debian/control
@@ -59,6 +59,7 @@ Description: PulseAudio sound server
 Package: pulseaudio-dbg
 Architecture: any
 Priority: extra
+Section: debug
 Depends: ${misc:Depends}, pulseaudio (= ${binary:Version})
 Description: PulseAudio sound server detached debugging symbols
  PulseAudio, previously known as Polypaudio, is a sound server for POSIX and
@@ -93,6 +94,7 @@ Description: Command line tools for the PulseAudio sound server
 Package: pulseaudio-utils-dbg
 Architecture: any
 Priority: extra
+Section: debug
 Depends: ${misc:Depends}, pulseaudio-utils (= ${binary:Version})
 Description: PulseAudio command line tools detached debugging symbols
  PulseAudio, previously known as Polypaudio, is a sound server for POSIX and
@@ -118,6 +120,7 @@ Description: PulseAudio ESD compatibility layer
 Package: pulseaudio-esound-compat-dbg
 Architecture: any
 Priority: extra
+Section: debug
 Depends: ${misc:Depends}, pulseaudio-esound-compat (= ${binary:Version})
 Description: PulseAudio ESD compatibility layer debugging symbols
  PulseAudio, previously known as Polypaudio, is a sound server for POSIX and
@@ -143,6 +146,7 @@ Description: Zeroconf module for PulseAudio sound server
 Package: pulseaudio-module-zeroconf-dbg
 Architecture: any
 Priority: extra
+Section: debug
 Depends: ${misc:Depends}, pulseaudio-module-zeroconf (= ${binary:Version})
 Description: Zeroconf module for PulseAudio sound server debugging symbols
  PulseAudio, previously known as Polypaudio, is a sound server for POSIX and
@@ -167,6 +171,7 @@ Description: HAL device detection module for PulseAudio sound server
 Package: pulseaudio-module-hal-dbg
 Architecture: any
 Priority: extra
+Section: debug
 Depends: ${misc:Depends}, pulseaudio-module-hal (= ${binary:Version})
 Description: HAL module for PulseAudio sound server debugging symbols
  PulseAudio, previously known as Polypaudio, is a sound server for POSIX and
@@ -190,6 +195,7 @@ Description: jackd modules for PulseAudio sound server
 Package: pulseaudio-module-jack-dbg
 Architecture: any
 Priority: extra
+Section: debug
 Depends: ${misc:Depends}, pulseaudio-module-jack (= ${binary:Version})
 Description: jackd modules for PulseAudio sound server debugging symbols
  PulseAudio, previously known as Polypaudio, is a sound server for POSIX and
@@ -214,6 +220,7 @@ Description: lirc module for PulseAudio sound server
 Package: pulseaudio-module-lirc-dbg
 Architecture: any
 Priority: extra
+Section: debug
 Depends: ${misc:Depends}, pulseaudio-module-lirc (= ${binary:Version})
 Description: lirc module for PulseAudio sound server debugging symbols
  PulseAudio, previously known as Polypaudio, is a sound server for POSIX and
@@ -237,6 +244,7 @@ Description: GConf module for PulseAudio sound server
 Package: pulseaudio-module-gconf-dbg
 Architecture: any
 Priority: extra
+Section: debug
 Depends: ${misc:Depends}, pulseaudio-module-gconf (= ${binary:Version})
 Description: GConf module for PulseAudio sound server debugging symbols
  PulseAudio, previously known as Polypaudio, is a sound server for POSIX and
@@ -257,6 +265,7 @@ Description: RAOP module for PulseAudio sound server
 
 Package: pulseaudio-module-raop-dbg
 Architecture: any
+Section: debug
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Description: RAOP module for PulseAudio sound server
  PulseAudio, previously known as Polypaudio, is a sound server for POSIX and
@@ -283,6 +292,7 @@ Description: Bluetooth module for PulseAudio sound server
 Package: pulseaudio-module-bluetooth-dbg
 Architecture: alpha amd64 arm armel hppa i386 ia64 mips mipsel powerpc s390 sparc
 Priority: extra
+Section: debug
 Depends: ${misc:Depends}, pulseaudio-module-bluetooth (= ${binary:Version})
 Description: Bluetooth module for PulseAudio sound server
  PulseAudio, previously known as Polypaudio, is a sound server for POSIX and
@@ -309,6 +319,7 @@ Description: X11 module for PulseAudio sound server
 Package: pulseaudio-module-x11-dbg
 Architecture: any
 Priority: extra
+Section: debug
 Depends: ${misc:Depends}, pulseaudio-module-x11 (= ${binary:Version})
 Description: X11 module for PulseAudio sound server debugging symbols
  PulseAudio, previously known as Polypaudio, is a sound server for POSIX and
@@ -331,7 +342,7 @@ Description: PulseAudio client libraries
  via PulseAudio's native interface.
 
 Package: libpulse0-dbg
-Section: libs
+Section: debug
 Architecture: any
 Priority: extra
 Depends: ${misc:Depends}, libpulse0 (= ${binary:Version})
@@ -357,6 +368,7 @@ Description: PulseAudio client libraries (glib support)
  This package adds support for glib2 client applications.
 
 Package: libpulse-mainloop-glib0-dbg
+Section: debug
 Architecture: any
 Priority: extra
 Depends: ${misc:Depends}, libpulse-mainloop-glib0 (= ${binary:Version})
@@ -383,6 +395,7 @@ Description: PulseAudio client libraries (zeroconf support)
  PulseAudio sinks and sources by client applications.
 
 Package: libpulse-browse0-dbg
+Section: debug
 Architecture: any
 Priority: extra
 Depends: ${misc:Depends}, libpulse-browse0 (= ${binary:Version})
