--- a/debian/control
+++ b/debian/control
@@ -12,6 +12,7 @@ Build-Depends: debhelper (>= 5), cdbs, quilt, m4, libltdl-dev (>= 2.2.6a-2),
     libavahi-client-dev, libjack0.100.0-dev, libwrap0-dev,
     liblircclient-dev, libgconf2-dev, libhal-dev, libasyncns-dev,
     libatomic-ops-dev, libspeexdsp-dev (>= 1.2~rc1),
+    libbluetooth-dev (>= 4.40) [!kfreebsd-i386 !kfreebsd-amd64 !hurd-i386],
     libpolkit-dbus-dev, libgdbm-dev, intltool, libgtk2.0-dev, libxtst-dev,
     libssl-dev
 Standards-Version: 3.8.1
@@ -274,33 +275,33 @@ Description: RAOP module for PulseAudio sound server
  .
  This package contains debugging symbols for the PulseAudio RAOP module.
 
-#Package: pulseaudio-module-bluetooth
-#Architecture: alpha amd64 arm armel hppa i386 ia64 mips mipsel powerpc s390 sparc
-#Priority: extra
-#Depends: ${shlibs:Depends}, ${misc:Depends}
-#Conflicts: pulseaudio (<< 0.9.14-2)
-#Description: Bluetooth module for PulseAudio sound server
-# PulseAudio, previously known as Polypaudio, is a sound server for POSIX and
-# WIN32 systems. It is a drop in replacement for the ESD sound server with
-# much better latency, mixing/re-sampling quality and overall architecture.
-# .
-# This module enables PulseAudio to work with bluetooth devices, like headset
-# or audio gateway.
-# .
-# The module is called module-bluetooth
-#
-#Package: pulseaudio-module-bluetooth-dbg
-#Architecture: alpha amd64 arm armel hppa i386 ia64 mips mipsel powerpc s390 sparc
-#Priority: extra
-#Section: debug
-#Depends: ${misc:Depends}, pulseaudio-module-bluetooth (= ${binary:Version})
-#Description: Bluetooth module for PulseAudio sound server
-# PulseAudio, previously known as Polypaudio, is a sound server for POSIX and
-# WIN32 systems. It is a drop in replacement for the ESD sound server with
-# much better latency, mixing/re-sampling quality and overall architecture.
-# .
-# This package contains debugging symbols for the PulseAudio bluetooth module.
-#
+Package: pulseaudio-module-bluetooth
+Architecture: alpha amd64 arm armel hppa i386 ia64 mips mipsel powerpc s390 sparc
+Priority: extra
+Depends: ${shlibs:Depends}, ${misc:Depends}, bluez (>= 4.40)
+Conflicts: pulseaudio (<< 0.9.14-2)
+Description: Bluetooth module for PulseAudio sound server
+ PulseAudio, previously known as Polypaudio, is a sound server for POSIX and
+ WIN32 systems. It is a drop in replacement for the ESD sound server with
+ much better latency, mixing/re-sampling quality and overall architecture.
+ .
+ This module enables PulseAudio to work with bluetooth devices, like headset
+ or audio gateway.
+ .
+ The module is called module-bluetooth
+
+Package: pulseaudio-module-bluetooth-dbg
+Architecture: alpha amd64 arm armel hppa i386 ia64 mips mipsel powerpc s390 sparc
+Priority: extra
+Section: debug
+Depends: ${misc:Depends}, pulseaudio-module-bluetooth (= ${binary:Version})
+Description: Bluetooth module for PulseAudio sound server
+ PulseAudio, previously known as Polypaudio, is a sound server for POSIX and
+ WIN32 systems. It is a drop in replacement for the ESD sound server with
+ much better latency, mixing/re-sampling quality and overall architecture.
+ .
+ This package contains debugging symbols for the PulseAudio bluetooth module.
+
 Package: pulseaudio-module-x11
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}, pulseaudio-utils
