--- a/debian/control
+++ b/debian/control
@@ -27,8 +27,8 @@ Depends: ${shlibs:Depends}, ${misc:Depends}, adduser,
 Conflicts: libltdl3 (<< 1.5.24-1)
 Recommends: pulseaudio-module-hal, pulseaudio-module-x11,
     libasound2-plugins, gstreamer0.10-pulseaudio,
-    pulseaudio-esound-compat, paprefs, padevchooser
-Suggests: pulseaudio-utils, pavumeter, pavucontrol, paman
+    pulseaudio-esound-compat
+Suggests: pulseaudio-utils, pavumeter, pavucontrol, paman, paprefs
 Description: PulseAudio sound server
  PulseAudio, previously known as Polypaudio, is a sound server for POSIX and
  WIN32 systems. It is a drop in replacement for the ESD sound server with
