Removed PolicyKit related bits (pulse no longer depends on it)
* debian/pulseaudio.install: Don't install the PolicyKit config file
* debian/control: Removed build-dep on libpolkit-dbus-dev

--- a/debian/control
+++ b/debian/control
@@ -13,7 +13,7 @@ Build-Depends: debhelper (>= 5), cdbs, quilt, m4, libltdl-dev (>= 2.2.6a-2),
     liblircclient-dev, libgconf2-dev, libhal-dev, libasyncns-dev,
     libatomic-ops-dev, libspeexdsp-dev (>= 1.2~rc1),
     libbluetooth-dev (>= 4.40) [!kfreebsd-i386 !kfreebsd-amd64 !hurd-i386],
-    libpolkit-dbus-dev, libgdbm-dev, intltool, libgtk2.0-dev, libxtst-dev,
+    libgdbm-dev, intltool, libgtk2.0-dev, libxtst-dev,
     libssl-dev
 Standards-Version: 3.8.1
 Vcs-Git: git://git.debian.org/git/pkg-pulseaudio/pulseaudio.git
